Add deps: walkdir@2.2.7, failure@0.1.5

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ authors = ["Yalin Gunayer <yalin.gunayer@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+failure = "0.1.5"
 glob = "0.3.0"
+walkdir = "2.2.7"
