--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2018"
 
 [dependencies]
 failure = "0.1.5"
+chardet = "0.2.4"
+encoding = "0.2.33"
 walkdir = "2.2.7"
+tree_magic = "0.2.1"
+encoding_rs = "0.8.17"
